--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,27 @@
 @font-face {
     font-family: "BudweiserSerif";
-    src: url("https://seuusuario.github.io/fonte/fontes/BudweiserSerif-Regular.ttf") format("truetype");
+    src: url("https://esportista.github.io/fonte/fontes/BudweiserSerif-Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: "eFootballStencil";
-    src: url("https://seuusuario.github.io/fonte/fontes/eFootballStencil-Regular.woff") format("woff");
+    src: url("https://esportista.github.io/fonte/fontes/eFootballStencil-Regular.woff") format("woff");
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: "EmiratesBold";
-    src: url("https://seuusuario.github.io/fonte/fontes/emirates-bold-v3.woff2") format("woff2");
+    src: url("https://esportista.github.io/fonte/fontes/emirates-bold-v3.woff2") format("woff2");
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: "HeinekenSerif";
-    src: url("https://seuusuario.github.io/fonte/fontes/heinekenserif18-bold.woff2") format("woff2");
+    src: url("https://esportista.github.io/fonte/fontes/heinekenserif18-bold.woff2") format("woff2");
     font-weight: bold;
     font-style: normal;
 }
