--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ h2 {
 }
 
 footer {
+    font-family: "BudweiserSerif", Arial, sans-serif;
     background-color: #333;
     color: white;
     padding: 10px;
