--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body {
 
 header {
     background-color: #0044cc;
-    color: white;
+    color: #FFFF00;
     padding: 20px;
     text-align: center;
     font-family: "eFootballStencil", sans-serif;  /* Fonte personalizada para o header */
