--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
 }
 
 header {
-    background-color: #0044cc;
+    background-color: #000096;
     color: #FFFF00;
     padding: 20px;
     text-align: center;
