--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ header {
     padding: 30px;
     text-align: center;
     font-family: "eFootballStencil", sans-serif;  /* Fonte personalizada para o header */
+    font-size: 2.5em;  /* Aumenta o tamanho da fonte */
 }
 
 h1 {
