--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ header {
 }
 
 h1 {
-    margin: 0;
+    /* margin: 0; */
     font-size: 1.5em;
     font-family: "eFootballStencil", sans-serif;  /* Fonte personalizada para o h1 */
 }
