--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
     background-color: #f4f4f4;
     color: #333;
     margin: 0;
-    /* padding: 0; */
+    padding: 0;
 }
 
 header {
@@ -36,7 +36,7 @@ header {
 }
 
 h1 {
-    /* margin: 0; */
+    margin: 0;
     font-size: 2.0em;
     font-family: "eFootballStencil", sans-serif;  /* Fonte personalizada para o h1 */
 }
@@ -47,9 +47,9 @@ h2 {
 }
 
 footer {
-    font-family: "EmiratesBold", sans-serif;
     background-color: #333;
     color: white;
+    font-family: "EmiratesBold", sans-serif;
     padding: 10px;
     text-align: center;
 }
