--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ header h1 {
 
 /* Estilo para as seções */
 h2 {
-    color: #0044cc;            /* Azul mais claro */
+    color: #000096;  /* Azul escuro */
     font-family: "EmiratesBold", sans-serif; /* Fonte personalizada */
 }
 
