--- a/styles.css
+++ b/styles.css
@@ -40,8 +40,6 @@ header {
     text-align: center;
     font-family: "eFootballStencil", sans-serif;
     font-size: 1.5em;
-    z-index: 1;  /* Garante que o cabeçalho fique acima da imagem */
-    position: relative;
 }
 
 header h1 {
@@ -57,7 +55,6 @@ section {
     padding: 20px;
     align-items: center;  /* Centraliza verticalmente */
     height: auto; /* Ajusta a altura da section para caber o conteúdo */
-    position: relative;  /* Permite sobreposição */
 }
 
 section .text-content {
@@ -69,14 +66,11 @@ section .text-content {
 }
 
 section .image-content {
-    position: absolute;  /* Permite sobreposição */
-    right: 0;  /* Coloca a imagem à direita */
-    top: 0;  /* Fixa a imagem no topo */
+    flex: 1;
     background-image: url('https://esportista.github.io/arquivo/imagens/Arthur.png');
     background-size: cover;  /* A imagem cobre todo o espaço disponível */
     background-position: center;
-    width: 50%;  /* A imagem ocupa 50% do espaço */
-    height: 100%;  /* A imagem ocupa toda a altura da section */
+    height: 100%;  /* Altura 100% para se ajustar ao conteúdo */
     min-height: 300px;  /* Garante uma altura mínima */
 }
 
@@ -102,8 +96,6 @@ footer {
     font-family: "EmiratesBold", sans-serif;
     margin-top: 20px;
     font-size: 1em;
-    z-index: 1;  /* Garante que o rodapé fique acima da imagem */
-    position: relative;
 }
 
 /* Estilo responsivo para dispositivos móveis */
@@ -118,8 +110,6 @@ footer {
 
     section .image-content {
         height: 200px; /* Ajusta a altura da imagem em telas menores */
-        width: 100%;  /* A imagem ocupa toda a largura em telas menores */
-        position: relative;  /* Para não sobrepor no modo responsivo */
     }
 
     header h1 {
