--- a/styles.css
+++ b/styles.css
@@ -72,16 +72,12 @@ section .text-content {
 
 section .image-content {
     flex: 1;
-    background-image: url('https://esportista.github.io/arquivo/imagens/Arthur.png');
-    background-size: cover;
-    background-position: center;
+    /* Remover a imagem de fundo */
     height: 100%;
     min-height: 300px;
     border-radius: 8px;
     position: relative;
     overflow: hidden;
-    background-repeat: no-repeat; /* Evita duplicação da imagem */
-    background-attachment: fixed; /* Melhor controle do comportamento da imagem */
 }
 
 /* Estilo para os parágrafos dentro da section */
