--- a/styles.css
+++ b/styles.css
@@ -41,11 +41,38 @@ header {
     font-family: "eFootballStencil", sans-serif;
     font-size: 2.2em;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    position: relative; /* Necessário para o posicionamento absoluto da imagem */
 }
 
+header .header-image {
+    position: absolute; /* A imagem vai se sobrepor ao cabeçalho */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: -1; /* A imagem ficará atrás do texto */
+}
+
+header .header-image img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center center;
+}
+
+/* Estilo do conteúdo do cabeçalho */
 header h1 {
     margin: 0;
     font-size: 2.5em;
+    z-index: 1; /* O texto ficará acima da imagem */
+}
+
+header p {
+    z-index: 1; /* O texto ficará acima da imagem */
 }
 
 /* Estilo para as seções */
@@ -58,7 +85,6 @@ section {
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    position: relative; /* Necessário para o posicionamento absoluto da imagem */
 }
 
 section .text-content {
@@ -69,33 +95,6 @@ section .text-content {
     hyphens: auto;
     font-size: 1.1em;
     line-height: 1.8;
-    z-index: 1; /* Garante que o texto fique acima da imagem */
-}
-
-section .image-content {
-    flex: 1;
-    position: relative; /* Posicionamento do contêiner da imagem */
-    height: 300px; /* Altura mínima da área da imagem */
-    overflow: hidden; /* Oculta qualquer parte da imagem que ultrapassar o contêiner */
-}
-
-section .image-content img {
-    position: absolute; /* Permite que a imagem ultrapasse o contêiner */
-    top: 0;
-    left: 0;
-    width: auto; /* Mantém o tamanho original da imagem */
-    height: 100%; /* A imagem irá cobrir toda a altura do contêiner */
-    object-fit: cover; /* A imagem irá cobrir o contêiner, cortando as partes excedentes */
-    object-position: center center; /* Garante que a imagem seja centralizada */
-    z-index: 0; /* A imagem ficará atrás do conteúdo textual */
-}
-
-/* Estilo para os parágrafos dentro da section */
-section p {
-    line-height: 1.6;
-    margin-bottom: 20px;
-    font-size: 1.1em;
-    color: #666;
 }
 
 /* Classe de contêiner flexível */
@@ -118,6 +117,10 @@ footer {
 
 /* Estilo responsivo para dispositivos móveis */
 @media (max-width: 768px) {
+    header h1 {
+        font-size: 2em;
+    }
+
     section {
         flex-direction: column;
         margin: 10px 0;
@@ -126,19 +129,6 @@ footer {
 
     section .text-content {
         padding-right: 0;
-    }
-
-    section .image-content {
-        height: 200px;
-        margin-top: 20px;
-    }
-
-    header h1 {
-        font-size: 2em;
-    }
-
-    section p {
-        font-size: 1em;
     }
 
     footer {
